Add footer attribution under board

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
           <div id="board" class="board wide responsive" aria-label="すごろくマップ"></div>
         </div>
       </section>
+
+      <footer class="site-footer">
+        コード生成：OpenAI Codex（作者の指示に基づく） / Code generated with OpenAI Codex under author direction.
+      </footer>
     </main>
 
     <script src="app.js"></script>
